Added usage description to index.html.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+
+<title>Image search abstraction layer</title>
+
+<!-- Bootstrap CSS and JavaScript -->
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
 <body>
+
+<div class="container">
+
+  <h1>ImageSearch Abstraction Layer</h1>
+
+  <p>A project for FreeCodeCamp API exercises</p>
+
+  <p>Usage:
+    To do a search, use
+    <code>
+      /api/imagesearch/keyword[?offset=N]
+    </code>
+  </p>
+
+  <p>
+    To query 10 last searches, use
+    <code>
+      /api/latest/imagesearch
+    </code>
+  </p>
+
+  <p>A full example:<br/>
+
+  </p>
+
+  <p>Written by <a href="http://freecodecamp.com/tpoikela">tpoikela</a></p>
+
+</div>
+
 </body>
 
 </html>
