Added type attr to boostrap css.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>Image search abstraction layer</title>
 
-<title>Image search abstraction layer</title>
+<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<!-- Bootstrap CSS and JavaScript -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -17,21 +17,17 @@
   <p>A project for FreeCodeCamp API exercises</p>
 
   <p>Usage:
-    To do a search, use
+    To do a search, use</br>
     <code>
       /api/imagesearch/keyword[?offset=N]
     </code>
   </p>
 
   <p>
-    To query 10 last searches, use
+    To query 10 last searches, use</br>
     <code>
       /api/latest/imagesearch
     </code>
-  </p>
-
-  <p>A full example:<br/>
-
   </p>
 
   <p>Written by <a href="http://freecodecamp.com/tpoikela">tpoikela</a></p>
