Added usage explanation.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Image search abstraction layer</title>
 
-<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 </head>
 
@@ -14,7 +14,7 @@
 
   <h1>ImageSearch Abstraction Layer</h1>
 
-  <p>A project for FreeCodeCamp API exercises</p>
+  <p>A project for FreeCodeCamp backend API exercises</p>
 
   <p>Usage:
     To do a search, use</br>
@@ -29,6 +29,9 @@
       /api/latest/imagesearch
     </code>
   </p>
+
+  <p>You must type the following commands into the browser after the URL of this
+  page.</p>
 
   <p>Written by <a href="http://freecodecamp.com/tpoikela">tpoikela</a></p>
 
